--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -4,10 +4,15 @@
 	padding: 0;
 }
 
+/*estilos contenedor mapa - hace que se centre y disminuya o aumente de tamaño*/
+#cont-map{ 
+	width: 70%;
+	margin:0 auto;
+}
 #map{
 	width: 100%;
-	height: 100vh;
-	border: 2px solid black;
+	height: 80vh;
+	border: thin solid silver;
 }
 
 button{
