--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -39,6 +39,7 @@ button:hover, button:focus{
 
 .alinear input{
 	display: block;
+	width: 100%;
 	border:solid thin silver;
 	border-radius: 3px;
 }
